# Access-control

Access Control/Access-control-main/: .gitignore  CMakeLists.txt  README.md  partitions.csv  progress.txt
Access Control/Access-control-main/components/: structures.hpp
Access Control/Access-control-main/components/drivers/: CMakeLists.txt  _led.cpp  _led.hpp  board.cpp  board.hpp  nfc_reader.cpp  nfc_reader.hpp  pinout.h  qr_reader.cpp  qr_reader.hpp
Access Control/Access-control-main/components/drivers/arduino/: DFRobot_GM60.cpp  DFRobot_GM60.hpp  arduino_wrapper.cpp  arduino_wrapper.hpp  mfrc522.cpp  mfrc522.hpp
Access Control/Access-control-main/components/system/: CMakeLists.txt  log_manager.cpp  log_manager.hpp  nvs.cpp  nvs.hpp  nvs_config.cpp  nvs_config.hpp  nvs_runtime.cpp  nvs_runtime.hpp  thread.cpp  thread.hpp  tools.cpp  tools.hpp
Access Control/Access-control-main/main/: CMakeLists.txt  _access_point.cpp  _access_point.hpp  _temp.h  _wificonnect.cpp  _wificonnect.h  access_control.cpp  access_control.hpp  card_data.cpp  card_data.hpp  device.cpp  device.hpp  main.cpp  wifi_ap.cpp  wifi_ap.hpp  wifi_station.cpp  wifi_station.hpp
Access Control/Access-control-main/webserver/: index.html  update.html
